2015-05-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/log.c (log_init): Don't duplicate log file descriptor to fixed 3
	value. Fixes closing of a file descriptor with GnuTLS 3.3.8-9.

2015-05-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (loading_handler_start): Save the socket's flags
	correctly, and properly use it with O_NONBLOCK.

2015-05-04  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (loading_handler_start): Set back the global socket's
	flags after loading end.

2015-04-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/pluginload.c (plugins_reload_from_dir): Ensure openvas-scanner
	builds with GLib =< 2.28 by wrapping g_slist_free_full () in an ifdef
	and falling back to g_slist_foreach () / g_slist_free () when using
	older GLib versions. Based on patch suggested by Miguel Angel Cabrera
	Moya.

2015-04-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (loading_handler_start): Set global socket as
	nonblocking. Periodically check that parent is still alive.
	(reload_openvassd, main): Check loading_handler_start() return value.
	Reported by Miguel Angel Cabrera.

2015-04-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginlaunch.c (plugin_launch): Correctly set the plugin's timeout
	when none is provided in the nvt. Issue reported by Kent Fritz.

2015-04-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Remove num_deps, dependencies and ports from struct hash and use
	nvticache. Reduces memory usage by scanning processes by ~1.5M.

	* src/pluginscheduler.c (struct hash): Remove dependencies, num_deps and
	ports elements.
	(hash_link_destroy, hash_add): Adjust for removed elements.
	(hash_fill_deps): Get dependencies from nvticache.
	(scheduler_mark_running_ports, scheduler_rm_running_ports): Get
	required_ports from nvticache.

2015-04-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>
